--- a/npm-import-stats/package.json
+++ b/npm-import-stats/package.json
@@ -14,10 +14,12 @@
     "sourcegraph:prepublish": "parcel build --no-minify src/extension.ts"
   },
   "devDependencies": {
+    "@sourcegraph/tsconfig": "^3.0.0",
+    "@sourcegraph/tslint-config": "^12.1.0",
     "@types/lru-cache": "^4.1.1",
-    "parcel-bundler": "^1.10.0",
-    "sourcegraph": "^16.0.0",
-    "typescript": "^3.0.3"
+    "parcel-bundler": "^1.10.3",
+    "sourcegraph": "^19.2.0",
+    "typescript": "^3.2.1"
   },
   "dependencies": {
     "rxjs": "^6.3.3",
