--- a/dockerfile-lint-extension/extension/package.json
+++ b/dockerfile-lint-extension/extension/package.json
@@ -14,7 +14,9 @@
         "category": "Dockerfile linter",
         "command": "updateConfiguration",
         "commandArguments": [
-          ["dockerfilelint.enabled"],
+          [
+            "dockerfilelint.enabled"
+          ],
           "${!config.dockerfilelint.enabled}",
           null,
           "json"
@@ -56,7 +58,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sourcegraph/sourcegraph-extension-samples/dockerfile-lint-extension"
+    "url": "https://github.com/sourcegraph/sourcegraph-extension-samples/tree/master/dockerfile-lint-extension"
   },
   "browserslist": [
     "last 1 Chrome versions",
