Correct repository fields
"url" needs to be a valid git clone URL
"directory" can be used to specify the directory
TypeScript global references relies on these fields

--- a/dockerfile-lint-extension/extension/package.json
+++ b/dockerfile-lint-extension/extension/package.json
@@ -58,7 +58,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sourcegraph/sourcegraph-extension-samples/tree/master/dockerfile-lint-extension"
+    "url": "https://github.com/sourcegraph/sourcegraph-extension-samples",
+    "directory": "dockerfile-lint-extension"
   },
   "browserslist": [
     "last 1 Chrome versions",
