--- a/npm-import-stats/package.json
+++ b/npm-import-stats/package.json
@@ -4,7 +4,8 @@
   "title": "npm import stats",
   "description": "Displays stats about npm packages next to import statements.",
   "repository": {
-    "url": "https://github.com/sourcegraph/sourcegraph-extension-samples.git"
+    "url": "https://github.com/sourcegraph/sourcegraph-extension-samples.git",
+    "directory": "npm-import-stats"
   },
   "activationEvents": [
     "*"
