Fizxed typos, added $schema

--- a/dockerfile-lint-extension/extension/package.json
+++ b/dockerfile-lint-extension/extension/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://raw.githubusercontent.com/sourcegraph/sourcegraph/master/shared/src/schema/extension.schema.json",
   "name": "dockerfile-lint",
   "title": "WIP: Lint a Dockerfile using Hadolint",
   "description": "Lint a Dockerfile using Hadolint",
