--- a/py-button/tsconfig.json
+++ b/py-button/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./node_modules/@sourcegraph/tsconfig/tsconfig.json",
+  "extends": "@sourcegraph/tsconfig",
   "compilerOptions": {
     "target": "es2016",
     "module": "esnext",
