--- a/dockerfile-lint-extension/extension/package.json
+++ b/dockerfile-lint-extension/extension/package.json
@@ -49,7 +49,8 @@
     "tslint": "tslint -p tsconfig.json './src/**/*.ts'",
     "typecheck": "tsc -p tsconfig.json",
     "build": "parcel build --out-file dist/dockerfile-lint.js src/dockerfile-lint.ts",
-    "serve": "parcel serve --no-hmr --out-file dist/dockerfile-lint.js src/dockerfile-lint.ts",
+    "symlink-package": "mkdirp dist && lnfs ./package.json ./dist/package.json",
+    "serve": "npm run symlink-package && parcel serve --no-hmr --out-file dist/dockerfile-lint.js src/dockerfile-lint.ts",
     "dev": "src ext publish -url http://localhost:1234/dockerfile-lint.js && npm run serve",
     "watch:typecheck": "tsc -p tsconfig.json -w",
     "watch:build": "tsc -p tsconfig.dist.json -w",
@@ -69,6 +70,8 @@
   "devDependencies": {
     "@sourcegraph/tsconfig": "^3.0.0",
     "@sourcegraph/tslint-config": "^12.3.1",
+    "lnfs-cli": "^2.1.0",
+    "mkdirp": "^0.5.1",
     "parcel-bundler": "^1.10.3",
     "sourcegraph": "^20.1.0",
     "tslint": "^5.11.0",
