--- a/py-button/package.json
+++ b/py-button/package.json
@@ -4,7 +4,9 @@
   "title": "WIP: Python Button",
   "description": "Shows a button when a Python file is present",
   "publisher": "sourcegraph",
-  "activationEvents": ["onLanguage:python"],
+  "activationEvents": [
+    "onLanguage:python"
+  ],
   "version": "0.0.0-DEVELOPMENT",
   "license": "MIT",
   "repository": {
@@ -15,8 +17,8 @@
   "main": "dist/py-button.js",
   "contributes": {
     "actions": [
-    {
-      "id": "pybutton.open",
+      {
+        "id": "pybutton.open",
         "command": "open",
         "commandArguments": [
           "https://www.python.org/"
@@ -41,7 +43,8 @@
     "tslint": "tslint -p tsconfig.json './src/**/*.ts'",
     "typecheck": "tsc -p tsconfig.json",
     "build": "parcel build --out-file dist/py-button.js src/py-button.ts",
-    "serve": "parcel serve --no-hmr --out-file dist/py-button.js src/py-button.ts",
+    "symlink-package": "mkdirp dist && lnfs ./package.json ./dist/package.json",
+    "serve": "npm run symlink-package && parcel serve --no-hmr --out-file dist/py-button.js src/py-button.ts",
     "watch:typecheck": "tsc -p tsconfig.json -w",
     "watch:build": "tsc -p tsconfig.dist.json -w",
     "sourcegraph:prepublish": "npm run build"
@@ -55,6 +58,8 @@
   "devDependencies": {
     "@sourcegraph/tsconfig": "^3.0.0",
     "@sourcegraph/tslint-config": "^12.3.1",
+    "lnfs-cli": "^2.1.0",
+    "mkdirp": "^0.5.1",
     "parcel-bundler": "^1.10.3",
     "sourcegraph": "^20.1.0",
     "tslint": "^5.11.0",
