--- a/skeleton-language-extension/package.json
+++ b/skeleton-language-extension/package.json
@@ -26,7 +26,8 @@
     "tslint": "tslint -p tsconfig.json './src/**/*.ts'",
     "typecheck": "tsc -p tsconfig.json",
     "build": "parcel build --out-file dist/skeleton-language-extension.js src/skeleton-language-extension.ts",
-    "serve": "parcel serve --no-hmr --out-file dist/skeleton-language-extension.js src/skeleton-language-extension.ts",
+    "symlink-package": "mkdirp dist && lnfs ./package.json ./dist/package.json",
+    "serve": "npm run symlink-package && parcel serve --no-hmr --out-file dist/skeleton-language-extension.js src/skeleton-language-extension.ts",
     "watch:typecheck": "tsc -p tsconfig.json -w",
     "watch:build": "tsc -p tsconfig.dist.json -w",
     "sourcegraph:prepublish": "npm run build"
@@ -40,6 +41,8 @@
   "devDependencies": {
     "@sourcegraph/tsconfig": "^3.0.0",
     "@sourcegraph/tslint-config": "^12.3.1",
+    "lnfs-cli": "^2.1.0",
+    "mkdirp": "^0.5.1",
     "parcel-bundler": "^1.11.0",
     "sourcegraph": "^20.1.0",
     "tslint": "^5.12.0",
